style footer ,fix card classname wrap colaps

--- a/src/Style/Card.scss
+++ b/src/Style/Card.scss
@@ -47,7 +47,7 @@
   height: 216px;
 }
 
-.wrap {
+.wrap-card {
   max-width: 1260px;
 
   h1 {
