--- a/src/Style/LinksLine.scss
+++ b/src/Style/LinksLine.scss
@@ -34,8 +34,7 @@ line-height: 22px;
   }
 }
 ul {
-  margin-block-start: 0px;
-  padding-inline-start: 0px;
+  
   a {
     padding-right: 16px;
     text-decoration: none;
